axum-macros/tests/debug_handler/fail/output_tuple_too_many.stderr
error: Output Tuple cannot have more than 16 arguments.
  --> tests/debug_handler/fail/output_tuple_too_many.rs:5:3
   |
5  |   ) -> (
   |  ___^
6  | |     axum::http::StatusCode,
7  | |     AppendHeaders<[(axum::http::HeaderName, &'static str); 1]>,
8  | |     AppendHeaders<[(axum::http::HeaderName, &'static str); 1]>,
...  |
24 | |     axum::http::StatusCode,
25 | | ) {
   | |_^
